@@ -1,3 +1,9 @@
+= master
+
+* Add Chrooter.unveil for using unveil in tests (jeremyevans)
+
+* Support Unicorn.lockdown :unveil and :dev_unveil options for use of unveil instead of chroot (jeremyevans) 
+
 = 0.12.0 (2019-04-29)
 
 * Do not reference the rack middleware unicorn loads by default if unicorn is set to not load default middleware (jeremyevans)
